--- a/Signup.html
+++ b/Signup.html
@@ -32,7 +32,8 @@
             <a href="#">Forgot password?</a>
         </div>  
         
-        <button type="submit">Sign in</button>
+        <a href="menu.html" class="button-link">Sign in</a>
+
         <div class="belowsignup">
         <p>Already a member?</p> 
         <a href="Login.html">Login now</a> 
