--- a/Login.html
+++ b/Login.html
@@ -24,7 +24,7 @@
         <a href="#">Forgot password?</a>
         </div>  
         
-        <button type="submit">Login</button>
+        <a href="menu.html" class="button-link">Log in</a>
         
         <div class="belowsignup">
         <p>Not a member?</p> 
