--- a/menu.html
+++ b/menu.html
@@ -126,7 +126,7 @@
                         <div class="item-info">
                             <div class="item-name">Iced Latte</div>
                             <div class="item-price">$ 3.95</div>
-                            <div class="item-desc">Our dark, rich espresso balanced with steamed milk and light layer of foam</div>
+                            <div class="item-desc">Smooth espresso with cold milk poured over ice for a refreshing pick-me-up</div>
                         </div>
                         <div class="item-image">
                             <img src="Mafeu/iced latte.jpg" alt="Iced Latte">
@@ -138,7 +138,7 @@
                         <div class="item-info">
                             <div class="item-name">Iced Flat White</div>
                             <div class="item-price">$ 3.95</div>
-                            <div class="item-desc">Our dark, rich espresso balanced with steamed milk and light layer of foam</div>
+                            <div class="item-desc">Velvety micro-foam espresso over ice with a stronger coffee flavor</div>
                         </div>
                         <div class="item-image">
                             <img src="Mafeu/iced flat white.jpg" alt="Iced Flat White">
@@ -150,7 +150,7 @@
                         <div class="item-info">
                             <div class="item-name">Iced Americano</div>
                             <div class="item-price">$ 3.95</div>
-                            <div class="item-desc">Our dark, rich espresso balanced with steamed milk and light layer of foam</div>
+                            <div class="item-desc">Bold espresso shots with cold water over ice for a crisp, strong taste</div>
                         </div>
                         <div class="item-image">
                             <img src="Mafeu/iced americano.jpg" alt="Iced Americano">
@@ -162,7 +162,7 @@
                         <div class="item-info">
                             <div class="item-name">Iced Cappuccino</div>
                             <div class="item-price">$ 3.95</div>
-                            <div class="item-desc">Our dark, rich espresso balanced with steamed milk and light layer of foam</div>
+                            <div class="item-desc">Chilled espresso layered with cold frothed milk and a hint of foam</div>
                         </div>
                         <div class="item-image">
                             <img src="Mafeu/ice cappucino.jpg" alt="Iced Cappuccino">
@@ -174,7 +174,7 @@
                         <div class="item-info">
                             <div class="item-name">Iced Mocha</div>
                             <div class="item-price">$ 3.95</div>
-                            <div class="item-desc">Our dark, rich espresso balanced with steamed milk and light layer of foam</div>
+                            <div class="item-desc">Rich chocolate meets espresso and cold milk over ice for a sweet treat</div>
                         </div>
                         <div class="item-image">
                             <img src="Mafeu/iced mocha.jpg" alt="Iced Mocha">
@@ -192,7 +192,7 @@
                         <div class="item-info">
                             <div class="item-name">Hot Latte</div>
                             <div class="item-price">$ 3.95</div>
-                            <div class="item-desc">Our dark, rich espresso balanced with steamed milk and light layer of foam</div>
+                            <div class="item-desc">Creamy steamed milk blended with rich espresso for a smooth, comforting drink</div>
                         </div>
                         <div class="item-image">
                             <img src="Mafeu\images.jpg" alt="Hot Latte">
@@ -204,7 +204,7 @@
                         <div class="item-info">
                             <div class="item-name">Hot Flat White</div>
                             <div class="item-price">$ 3.95</div>
-                            <div class="item-desc">Our dark, rich espresso balanced with steamed milk and light layer of foam</div>
+                            <div class="item-desc">Silky micro-foam milk with a double shot of espresso for intense flavor</div>
                         </div>
                         <div class="item-image">
                             <img src="Mafeu\fl.jpg" alt="Hot Flat White">
@@ -216,7 +216,7 @@
                         <div class="item-info">
                             <div class="item-name">Hot Americano</div>
                             <div class="item-price">$ 3.95</div>
-                            <div class="item-desc">Our dark, rich espresso balanced with steamed milk and light layer of foam</div>
+                            <div class="item-desc">Hot water poured over espresso for a bold, full-bodied coffee experience</div>
                         </div>
                         <div class="item-image">
                             <img src="Mafeu\Hotamericano.jpeg" alt="Hot Americano">
@@ -228,7 +228,7 @@
                         <div class="item-info">
                             <div class="item-name">Hot Cappuccino</div>
                             <div class="item-price">$ 3.95</div>
-                            <div class="item-desc">Our dark, rich espresso balanced with steamed milk and light layer of foam</div>
+                            <div class="item-desc">Equal parts espresso, steamed milk, and airy foam for a classic Italian taste</div>
                         </div>
                         <div class="item-image">
                             <img src="Mafeu\images (1).jpg" alt="Hot Cappuccino">
@@ -240,7 +240,7 @@
                         <div class="item-info">
                             <div class="item-name">Hot Mocha</div>
                             <div class="item-price">$ 3.95</div>
-                            <div class="item-desc">Our dark, rich espresso balanced with steamed milk and light layer of foam</div>
+                            <div class="item-desc">Espresso blended with chocolate and steamed milk topped with whipped cream</div>
                         </div>
                         <div class="item-image">
                             <img src="Mafeu\images (2).jpg" alt="Hot Mocha">
