--- a/settings.html
+++ b/settings.html
@@ -13,6 +13,7 @@
         <div class="header">
             <a href="menu.html" class="back-btn">↩</a>
             <div class="page-title">Settings</div>
+            <div class="header-spacer"></div>
         </div>
 
         <!-- Scrollable Content -->
@@ -39,7 +40,7 @@
             <div class="section-title">General</div>
 
             <div class="menu-list">
-                <a href="#" class="menu-option">
+                <a href="vouchers.html" class="menu-option">
                     <div class="option-left">
                         <span class="option-icon">🎫</span>
                         <span class="option-text">Vouchers</span>
@@ -47,7 +48,7 @@
                     <span class="option-arrow">›</span>
                 </a>
 
-                <a href="#" class="menu-option">
+                <a href="order-history.html" class="menu-option">
                     <div class="option-left">
                         <span class="option-icon">📋</span>
                         <span class="option-text">Order History</span>
@@ -55,7 +56,7 @@
                     <span class="option-arrow">›</span>
                 </a>
 
-                <a href="#" class="menu-option">
+                <a href="help.html" class="menu-option">
                     <div class="option-left">
                         <span class="option-icon">❓</span>
                         <span class="option-text">Help Center</span>
@@ -63,7 +64,7 @@
                     <span class="option-arrow">›</span>
                 </a>
 
-                <a href="#" class="menu-option">
+                <a href="points.html" class="menu-option">
                     <div class="option-left">
                         <span class="option-icon">⭐</span>
                         <span class="option-text">Points</span>
@@ -71,7 +72,7 @@
                     <span class="option-arrow">›</span>
                 </a>
 
-                <a href="#" class="menu-option">
+                <a href="payment.html" class="menu-option">
                     <div class="option-left">
                         <span class="option-icon">💳</span>
                         <span class="option-text">Payment method</span>
