--- a/settings.html
+++ b/settings.html
@@ -83,7 +83,7 @@
         </div>
 
         <!-- Log Out Button -->
-        <a href="Login.html" class="logout-button">LOG OUT</a>
+        <a href="index.html" class="logout-button">LOG OUT</a>
     </div>
 </body>
 </html>
