--- a/Signup.html
+++ b/Signup.html
@@ -36,7 +36,7 @@
 
         <div class="belowsignup">
         <p>Already a member?</p> 
-        <a href="Login.html">Login now</a> 
+        <a href="index.html">Login now</a> 
         </div>
     </form>
     </div>
